--- a/Bootstrap Login/login.html
+++ b/Bootstrap Login/login.html
@@ -62,7 +62,7 @@
                             <label for="password">Password</label>
                         </div>
                         <div class="input-field">
-                            <input type="submit" class="submit" value="Sign In" onclick="loginAdmin()">
+                            <input type="submit" class="submit" value="Sign In">
                         </div>
                         <div class="signin">
                             <span>Don't have an account? <a href="register.html">Create here</a></span>
@@ -74,20 +74,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script>
-        function loginAdmin() {
-            var email = document.getElementById("email").value;
-            var password = document.getElementById("password").value;
-
-            // Periksa kecocokan username dan password dengan data yang valid
-            if (email === "admin@gmail.com" && password === "admin123") {
-                // Redirect ke halaman dashboard admin
-                window.location.href = "/dasboard/dash.html";
-            } else {
-                alert("Login gagal. Periksa kembali username dan password Anda.");
-            }
-        }
-    </script>
 </body>
 
 </html>
